# AdventOfCode

Day 1/: z1.py  z2.py
Day 10/: CMakeLists.txt  input_reader.h  z1.cpp  z2.cpp
Day 11/: z1.cpp  z2.cpp
Day 12/: z1.cpp
Day 2/: z1.py  z2.py
Day 3/: z1.py  z2.py
Day 4/: z1.py  z2.py
Day 5/: z1.py  z2.py
Day 6/: z1.py  z2.py
Day 7/: z1.py  z2.py
Day 8/: z1.cpp  z2.cpp
Day 9/: CMakeLists.txt  input_reader.cpp  z1.cpp  z2.cpp
